Added font, edited config.

--- a/assets/sass/_fonts.sass
+++ b/assets/sass/_fonts.sass
@@ -52,3 +52,17 @@
   font-display: swap
   font-weight: 400
   src: local('Cookie-Regular'), url('#{$font-path}cookie-v10-latin-regular.woff') format('woff2'), url('#{$font-path}cookie-v10-latin-regular.woff') format('woff')
+
+@font-face
+  font-family: 'Arame'
+  font-style: normal
+  font-display: swap
+  font-weight: 400
+  src: local('Arame Thin'), url('#{$font-path}Arame Thin.ttf') format('ttf')
+
+  @font-face
+  font-family: 'Arame'
+  font-style: bold
+  font-display: swap
+  font-weight: 400
+  src: local('Arame Bold'), url('#{$font-path}Arame-Bold.ttf') format('ttf')
