Switched main front from Cookie to Arame.

--- a/assets/sass/_fonts.sass
+++ b/assets/sass/_fonts.sass
@@ -58,11 +58,11 @@
   font-style: normal
   font-display: swap
   font-weight: 400
-  src: local('Arame Thin'), url('#{$font-path}Arame Thin.ttf') format('ttf')
+  src: local('Arame-Thin'), url('#{$font-path}Arame-Thin.ttf') format('ttf')
 
-  @font-face
+@font-face
   font-family: 'Arame'
   font-style: bold
   font-display: swap
-  font-weight: 400
-  src: local('Arame Bold'), url('#{$font-path}Arame-Bold.ttf') format('ttf')
+  font-weight: 500
+  src: local('Arame-Bold'), url('#{$font-path}Arame-Bold.ttf') format('ttf')
