--- a/assets/sass/_nav.sass
+++ b/assets/sass/_nav.sass
@@ -61,7 +61,8 @@
         color: var(--theme)
 
   &-brand
-    font-family: "Cookie"
+    font-family: "Arame"
+    font-style: "bold"
     font-size: 2em !important
     padding-top: 0 !important
     padding-bottom: 0 !important
