Fixed Arame fonts by using woff file format rather than ttf.

--- a/assets/sass/_fonts.sass
+++ b/assets/sass/_fonts.sass
@@ -57,12 +57,19 @@
   font-family: 'Arame'
   font-style: normal
   font-display: swap
+  font-weight: 300
+  src: local('Arame-Thin'), url('#{$font-path}Arame-Thin.woff') format('woff')
+
+@font-face
+  font-family: 'Arame'
+  font-style: normal
+  font-display: swap
   font-weight: 400
-  src: local('Arame-Thin'), url('#{$font-path}Arame-Thin.ttf') format('ttf')
+  src: local('Arame'), url('#{$font-path}Arame.woff') format('woff')
 
 @font-face
   font-family: 'Arame'
   font-style: bold
   font-display: swap
   font-weight: 500
-  src: local('Arame-Bold'), url('#{$font-path}Arame-Bold.ttf') format('ttf')
+  src: local('Arame-Bold'), url('#{$font-path}Arame-Bold.woff') format('woff')
