--- a/assets/sass/_nav.sass
+++ b/assets/sass/_nav.sass
@@ -61,8 +61,9 @@
         color: var(--theme)
 
   &-brand
-    font-family: "Courier New"
+    font-family: "Arame"
     font-style: bold
+    font-weight: 400
     font-size: 3em !important
     padding-top: 0 !important
     padding-bottom: 0 !important
